compiler/test-data/parser/backend/errors/missing_backend_name.frel
module backend.errors.missing_backend_name

backend {
    count : i32 = 0
}
